# en05229

./: README.md  __main__.py  docker-compose.yaml  pyproject.toml
Barreira/: BarreiraDupla.py  BarreiraSimples.py  __init__.py
